Fixed timeline internal rendering being a different height than display size. Made space on the right side of the timeline for 3 buttons. Changed how timeline legend and loading elements are rendered so the inner elements move when scrolling instead of translating the parent element.  This was to reduce complexity to make it easier to hide overflowed elements. Timeline alert image is now based on the one in the Blue Iris local console. Improved speed of looking up if specific dates have data loaded. Timeline loading elements no longer extend out of view to the edge of the day they are in. Minimized server status bars are no longer oversided on timeline tab. Timeline no longer tries to draw its canvas when the UI is not on the timeline tab. Timeline now scrolls with the video stream (H.264 only currently). Fixed bug where additional timeline legend elements were created offscreen to the left, to the day boundary. Fixed bug where the left border of the first day in timeline legend was sometimes visible or partly visible due to subpixel positioning. Early preparation for timeline video playback.

--- a/ui3/ui3.css
+++ b/ui3/ui3.css
@@ -1268,8 +1268,8 @@ div.invisibleLabel
 
 .statusTiny .progressBarOuter
 {
-	width: 100%;
-	height: 2px;
+	width: 100% !important;
+	height: 2px !important;
 }
 
 .progressBarInner
@@ -1546,10 +1546,10 @@ div.invisibleLabel
 
 .statusBar.statusTiny
 {
-	padding-bottom: 0px;
-	font-size: 0px;
-	line-height: 0px;
-	height: 3px;
+	padding-bottom: 0px !important;
+	font-size: 0px !important;
+	line-height: 0px !important;
+	height: 3px !important;
 }
 
 @media (min-width: 320px)
@@ -2949,18 +2949,26 @@ div.invisibleLabel
 
 .clipTimeline
 {
+	position: relative;
+	width: 100%;
+	height: 100%;
 }
 
 .timelineLegendBar
 {
 	height: 16px;
-	width: 100%;
 	background-color: var(--datetile-bg-color);
+	position: relative;
 }
 
 .timelineLegend
 {
 	position: absolute;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
 }
 
 .timelineLabel
@@ -3014,7 +3022,6 @@ div.invisibleLabel
 
 .timelineMain
 {
-	width: 100%;
 	height: 80px;
 	background-color: var(--timeline-background-color);
 	position: relative;
@@ -3027,6 +3034,7 @@ div.invisibleLabel
 	width: 100%;
 	position: absolute;
 	animation: fadeInOpacity .8s;
+	overflow: hidden;
 }
 
 .timelineLoaderTag
@@ -3083,10 +3091,15 @@ div.invisibleLabel
 	color: rgba(255,52,52,0.5);
 }
 
-.clipTimelineCanvas
+.timelineButtonBar
 {
-	width: 100%;
+	position: absolute;
+	top: 0px;
 	height: 100%;
+	right: 0px;
+	width: 32px;
+	box-sizing: border-box;
+	border-left: var(--button-color);
 }
 
 .timelineCenterBar
